--- a/apps/jwt-demo/src/app/page/dashboard.component.html
+++ b/apps/jwt-demo/src/app/page/dashboard.component.html
@@ -20,7 +20,15 @@
 </div>
 <button (click)="logout()">Logout (Remove token)</button>
 
-<span>token: {{ token$ | async | json }}</span>
+<div>
+	<span>accessToken$: {{ jwtTokenService.accessToken$ | async | json }}</span>
+	<span>isExpired? {{ isAccessTokenExpired$ | async }}</span>
+</div>
+
+<div>
+	<span>refreshToken$: {{ jwtTokenService.refreshToken$ | async | json }}</span>
+	<span>isExpired? {{ isRefreshTokenExpired$ | async }}</span>
+</div>
 
 <button (click)="api.requestWhitelistedPathOnWhitelistedDomain()">
 	Request whitelisted path on whitelisted domain
@@ -33,3 +41,5 @@
 	<button (click)="api.customGet(url.value)">Get from here:</button>
 	<span>URL</span><input #url type="text" placeholder="url" />
 </div>
+
+<button [routerLink]="'protected'">Go to a login protected page!</button>
