feat(jwt): autorefreshing login guard #204

--- a/apps/jwt-demo/src/app/page/dashboard.component.html
+++ b/apps/jwt-demo/src/app/page/dashboard.component.html
@@ -42,4 +42,4 @@
 	<span>URL</span><input #url type="text" placeholder="url" />
 </div>
 
-<button [routerLink]="'protected'">Go to a login protected page!</button>
+<button [routerLink]="'/protected'">Go to a login protected page!</button>
