--- a/apps/jwt-demo/src/app/page/dashboard.component.html
+++ b/apps/jwt-demo/src/app/page/dashboard.component.html
@@ -41,5 +41,14 @@
 	<button (click)="customGet(url.value)">Get from here:</button>
 	<span>URL</span><input #url type="text" placeholder="url" />
 </div>
-
+<ul>
+	<li>Launched Non-auth Requests: {{ state.launchedRequestCount$ | async }}</li>
+	<li>Launched Login Requests: {{ state.loginRequestCount$ | async }}</li>
+	<li>Launched Refresh Requests: {{ state.refreshRequestCount$ | async }}</li>
+	<li>Total Launched Requests: {{ state.totalRequestCount$ | async }}</li>
+	<li>Successful Responses: {{ state.successfulResponseCount$ | async }}</li>
+	<li>Failed Responses: {{ state.failedResponseCount$ | async }}</li>
+	<li>Total Responses: {{ state.totalResponseCount$ | async }}</li>
+	<li>Is currently refreshing: {{ jwtRefreshState.refreshLock$ | async }}</li>
+</ul>
 <button [routerLink]="'/protected'">Go to a login protected page!</button>
