--- a/apps/core-demo/src/app/app.component.html
+++ b/apps/core-demo/src/app/app.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar color="primary">
-	<h1>@aegis-auth</h1>
+	<h1>&#64;aegis-auth</h1>
 	<button mat-button routerLink="/typedoc">Typedoc</button>
 	<button mat-button routerLink="/jwt">Jwt Demo</button>
 	<a mat-icon-button target="_blank" [href]="homepage"
